updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
-/SSO/obj
-/SSO/bin
-/Portal/obj
-/Portal/bin
+*.bat
+*.log
+*.pdb
+*.suo
+*.tmp
+*.user
+.vs
+[Bb]in
+[Dd]ebug
+[Ll]og
+[Oo]bj
+[Rr]elease
+[Rr]eleases
+[Tt]est[Rr]esults
+dist
+node_modules
+package-lock.json
